--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
     name="Custom pixel by UWCC"
     content="Image filtering with Creative Coding and AI"
   />
-  <meta name="description" content="Image filtering with Creative Coding and AI" />
-  <meta property="og:title" content="Custom pixel by UWCC" />
+  <meta name="description" content="Finding hosues in the Wellington Hills" />
+  <meta property="og:title" content="Houses in Hills By Campbell Smith" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://23-2-dsdn242.github.io/mddn242-data-mapping/" />
-  <meta property="og:image" content="https://23-2-dsdn242.github.io/mddn242-data-mapping//preview.jpg" />
+  <meta property="og:url" content="https://23-2-dsdn242.github.io/ai-camera-plague-boy/" />
+  <meta property="og:image" content="https://23-2-dsdn242.github.io/ai-camera-plague-boy//preview.jpg" />
   <meta property="og:image:width" content="960" />
   <meta property="og:image:height" content="540" />
-  <meta property="og:description" content="Image filtering with Creative Coding and AI" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@uwcc" />
-  <meta name="twitter:title" content="Custom pixel by UWCC" />
-  <meta name="twitter:description" content="Image filtering with Creative Coding and AI" />
-  <meta name="twitter:image" content="https://23-2-dsdn242.github.io/mddn242-data-mapping/preview.jpg" />
-
+  <meta property="og:description" content="Finding hosues in the Wellington Hills" />
+  
 </head>
 <body style="background-color:white">
     <table>
